test/fail/wall.mo
//MOC-FLAG -Werror

// Warnings should become errors here

do {
 let true = true;
};

do {
 ignore [true, 1];
};

